--- a/index.html
+++ b/index.html
@@ -540,9 +540,9 @@
 			<!-- <li>November 12 - November 16, 2024:
 				<a href="https://2024.emnlp.org/" target="_blank">EMNLP 2024 at Miami, Florida</a>
 			</li> -->
-			<li>January 8-9, 2025:
+			<!-- <li>January 8-9, 2025:
 				<a href="https://jointmathematicsmeetings.org/meetings/national/jmm2025/2314_intro" target="_blank">JMM 2025 at Seattle, Washington</a>
-			</li>
+			</li> -->
 			<!-- <li>April 29 - May 4, 2025:
 				<a href="https://2025.naacl.org/" target="_blank">NAACL 2025 at Albuquerque, New Mexico</a>
 			</li>
@@ -1588,6 +1588,10 @@
 		<h3 id="Teaching" style="">Teaching</h3>
 		<hr>
 		<ul>
+			<li>
+				<strong>Guest Lecturer</strong>, <em>CSCE 638: Natural Language Processing: Foundation and Techniques</em> <a href="https://khhuang.me/CSCE638-S25/" target="_blank">[Website]</a> <br>
+				Graduate, TAMU, Spring 2025
+			</li>
 			<li>
 				<strong>Guest Lecturer</strong>, <em>CS 263: Natural Language Processing</em> <a href="docs/UCLA CS263 NLP_Guest Lecture_Pan Lu_2023.05.31.pdf" target="_blank">[Slides]</a> <br>
 				Graduate, UCLA, Spring 2023
