--- a/index.html
+++ b/index.html
@@ -1587,6 +1587,7 @@
 	<div class="container">
 		<h3 id="Teaching" style="">Teaching</h3>
 		<hr>
+		<h4 id="Teaching" style="">Guest Lecturers</h4>
 		<ul>
 			<li>
 				<strong>Guest Lecturer</strong>, <em>CSCE 638: Natural Language Processing: Foundation and Techniques</em> <a href="https://khhuang.me/CSCE638-S25/" target="_blank">[Website]</a> <br>
@@ -1597,6 +1598,18 @@
 				Graduate, UCLA, Spring 2023
 			</li>
 			<li>
+				<strong>Guest Lecturer</strong>, <em>ECE C247: Neural Networks and Deep Learning</em>  <a href="" target="_blank">[Slides]</a> <br>
+				Graduate, UCLA, Winter 2022
+			</li>
+			<li>
+				<strong>Guest Lecturer</strong>, <em>Data Mining: Theory and Algorithms</em><br>
+				Graduate, Tsinghua University, Fall 2017
+			</li>
+
+		</ul>
+		<h4 id="Teaching" style="">Teaching Assistants</h4>
+		<ul>
+			<li>
 				<strong>Teaching Associate</strong>, <em>ECE C247: Neural Networks and Deep Learning</em><br>
 				Graduate, UCLA, Winter 2023
 			</li>
@@ -1605,20 +1618,12 @@
 				Graduate, UCLA, Fall 2022
 			</li>
 			<li>
-				<strong>Guest Lecturer</strong>, <em>ECE C247: Neural Networks and Deep Learning</em>  <a href="" target="_blank">[Slides]</a> <br>
-				Graduate, UCLA, Winter 2022
-			</li>
-			<li>
 				<strong>Teaching Assistant</strong>, <em>ECE C247: Neural Networks and Deep Learning</em><br>
 				Graduate, UCLA, Winter 2022
 			</li>
 			<li>
 				<strong>Teaching Assistant</strong>, <em>CS 111: Operating System Principles</a></em><br>
 				Undergraduate, UCLA, Fall 2021
-			</li>
-			<li>
-				<strong>Guest Lecturer</strong>, <em>Data Mining: Theory and Algorithms</em><br>
-				Graduate, Tsinghua University, Fall 2017
 			</li>
 			<li>
 				<strong>Teaching Assistant</strong>, <em>C Programming Language</a></em><br>
