--- a/index.html
+++ b/index.html
@@ -1660,6 +1660,10 @@
 				Graduate, TAMU, Spring 2025
 			</li>
 			<li>
+				<strong>Guest Lecturer</strong>, <em>CSE 290C: Advanced Topics in Machine Learning</em> <a href="https://courses.engineering.ucsc.edu/courses/cse290C" target="_blank">[Website]</a> <br>
+				Graduate, UC Santa Cruz, Winter 2025
+			</li>
+			<li>
 				<strong>Guest Lecturer</strong>, <em>CS 263: Natural Language Processing</em> <a href="docs/UCLA CS263 NLP_Guest Lecture_Pan Lu_2023.05.31.pdf" target="_blank">[Slides]</a> <br>
 				Graduate, UCLA, Spring 2023
 			</li>
@@ -1709,6 +1713,10 @@
 					<strong>Program Chair</strong>, 
 					<a href="https://socalnlp.github.io/symp23/index.html" target="_blank">The 4th Southern California Natural Language Symposium (SoCal NLP)</a>,
 					Los Angeles, 2023.11
+				</li>
+				<li>
+					<strong>Area Chair</strong>, 
+					<a>ICLR 2025</a>
 				</li>
 			</ul>
 		<h4 id="Service" style="">Workshops and Tutorials</h4>
