--- a/index.html
+++ b/index.html
@@ -121,55 +121,63 @@
 						<a href="https://www.james-zou.com/people" target="_blank">Zou's Group</a>, where I am fortunate to be advised by <a href="https://www.james-zou.com/" target="_blank">James Zou</a>.
 					</p>
 					<p>
-						I received my Ph.D. in Computer Science from UCLA, advised by  <a href="http://web.cs.ucla.edu/~kwchang/" target="_blank">Kai-Wei Chang</a> and <a href="http://www.stat.ucla.edu/~sczhu/" target="_blank">Song-Chun Zhu</a>. I was a member of <a href="http://web.cs.ucla.edu/~kwchang/" target="_blank">UCLA Natural Language Processing Group (UCLA NLP)</a> and <a href="https://vcla.stat.ucla.edu/" target="_blank">the Center for Vision, Cognition, Learning, and Autonomy (VCLA)</a>.  Previously, I received my M.S. in computer science at Tsinghua University, supervised by <a href="http://dbgroup.cs.tsinghua.edu.cn/wangjy/" target="_blank">Jianyong Wang</a>. My research has been funded by 
+						I received my Ph.D. in Computer Science from UCLA, advised by  <a href="http://web.cs.ucla.edu/~kwchang/" target="_blank">Kai-Wei Chang</a> and <a href="http://www.stat.ucla.edu/~sczhu/" target="_blank">Song-Chun Zhu</a>. I was a member of <a href="https://web.cs.ucla.edu/~kwchang/members/" target="_blank">UCLA Natural Language Processing Group (UCLA NLP)</a>.  Previously, I received my M.S. in computer science at Tsinghua University, supervised by <a href="http://dbgroup.cs.tsinghua.edu.cn/wangjy/" target="_blank">Jianyong Wang</a>. My research has been funded by 
 						<a href="https://www.sciencehub.ucla.edu/2023-amazon-fellows/" target="_blank">Amazon PhD Fellowship</a>, 
 						<a href="https://www.bloomberg.com/company/stories/introducing-the-sixth-cohort-of-bloomberg-data-science-ph-d-fellows-2023-2024/" target="_blank">Bloomberg Data Science Ph.D. Fellowship</a>, 
 						<a href="https://www.qualcomm.com/research/university-relations/innovation-fellowship/2023-north-america" target="_blank">Qualcomm Innovation Fellowship</a>, 
 						<a href="https://grad.ucla.edu/funding/financial-aid/funding-for-continuing-students/dissertation-year-fellowship/" target="_blank">UCLA Dissertation Year Fellowship</a>, 
 						and NeurIPS Scholar Award.
+						<!-- and <a href="https://vcla.stat.ucla.edu/" target="_blank">the Center for Vision, Cognition, Learning, and Autonomy (VCLA)</a> -->
 					</p>
 					<p>
-						My research goal is to build machines that can <strong>reason</strong> and <strong>collaborate</strong> with humans for the common good. My primary research focuses on <strong>machine learning</strong> and <strong>NLP</strong>, particularly <strong>machine reasoning</strong>, <strong>mathematical reasoning</strong>, and <strong>scientific discovery</strong>. 
+						My research goal is to develop intelligent machines that can <strong>reason</strong> and <strong>collaborate</strong> with humans for the common good. My primary focus lies in <strong>machine learning</strong> and <strong>natural language processing</strong>, particularly in <strong>machine reasoning</strong>, <strong>mathematical reasoning</strong>, and <strong>scientific discovery</strong>. My recent research interests include:
 					</p>
 					<ul>
 						<li>
-							<strong>Mathematical reasoning</strong> in multimodal and knowledge-intensive contexts 
+							<strong>Mathematical Reasoning</strong> in multimodal and knowledge-intensive contexts 
 							<a href="https://mathvista.github.io/" target="_blank">[MathVista]</a>
 							<a href="https://arxiv.org/abs/2403.14624" target="_blank">[MathVerse]</a>
 							<a href="https://promptpg.github.io/" target="_blank">[PromptPG]</a>
 							<a href="https://lupantech.github.io/inter-gps/" target="_blank">[Inter-GPS]</a>
 							<a href="https://arxiv.org/abs/2110.13214" target="_blank">[IconQA]</a>
-							<a href="https://arxiv.org/abs/2402.17644" target="_blank">[QRData]</a>
-							<!-- <a href="https://arxiv.org/abs/2304.09842" target="_blank">[Chameleon]</a> -->
-							<!-- <a href="https://arxiv.org/abs/2305.12524" target="_blank">[TheoremQA]</a> -->
-							<!-- <a href="https://arxiv.org/abs/2212.10535" target="_blank">[DL4Math]</a> -->
-							<a href="https://arxiv.org/abs/2210.17517" target="_blank">[Lila]</a>
+							<!-- <a href="https://arxiv.org/abs/2402.17644" target="_blank">[QRData]</a> -->
+							<a href="https://arxiv.org/abs/2305.12524" target="_blank">[TheoremQA]</a>
+							<a href="https://arxiv.org/abs/2212.10535" target="_blank">[DL4Math]</a>
+							<!-- <a href="https://arxiv.org/abs/2210.17517" target="_blank">[Lila]</a> -->
 							<!-- <a href="https://arxiv.org/abs/2212.02746" target="_blank">[UniGeo]</a> -->
-							<a href="https://mathai2023.github.io/" target="_blank">[MATH-AI]</a>
+							<a href="https://mathai2024.github.io/" target="_blank">[MATH-AI]</a>
 						</li>
 						<li>
-							<strong>Tool-augmented large language models</strong> for planning, reasoning, and generation
+							<strong>Tool-Augmented LLMs</strong> and <strong>Agentic Systems</strong> for complex reasoning
+							<a href="https://octotools.github.io/" target="_blank">[OctoTools]</a>
 							<a href="https://textgrad.com/" target="_blank">[TextGrad]</a>
 							<a href="https://chameleon-llm.github.io/" target="_blank">[Chameleon]</a>
-							<a href="https://arxiv.org/abs/2406.13444" target="_blank">[VDebugger]</a> 
+							<a href="https://arxiv.org/abs/2501.06590" target="_blank">[ChemAgent]</a>
+
+							<!-- <a href="https://arxiv.org/abs/2406.13444" target="_blank">[VDebugger]</a>  -->
 							<!-- <a href="https://arxiv.org/abs/2307.10635" target="_blank">[SciBench]</a>  -->
-							<a href="https://arxiv.org/abs/2305.12524" target="_blank">[TheoremQA]</a>
+							<!-- <a href="https://arxiv.org/abs/2305.12524" target="_blank">[TheoremQA]</a> -->
 							<!-- <a href="https://arxiv.org/abs/2305.01795" target="_blank">[MPP]</a>  -->
 							<!-- <a href="https://arxiv.org/abs/2210.17517" target="_blank">[Lila]</a> -->
 						</li>
 						<li>
-							<strong>Parameter-efficient instruction tuning</strong> for large language models and vision-language models
+							<strong>Post-Training</strong>  and <strong>Test-Time Compute Optimization</strong> for foundation models
 							<a href="https://arxiv.org/abs/2405.19716" target="_blank">[STIC]</a> 
 							<a href="https://github.com/OpenGVLab/LLaMA-Adapter" target="_blank">[LLaMA-Adapter]</a> 
 							<a href="https://arxiv.org/abs/2303.16199" target="_blank">[LLaMA-Adapter V2]</a>
 							<a href="https://arxiv.org/abs/2402.05935" target="_blank">[SPHINX-X]</a> 
+							<a href="https://textgrad.com/" target="_blank">[TextGrad]</a>
+							<a href="https://promptpg.github.io/" target="_blank">[PromptPG]</a>
 						</li>
 						<li>
 							<!-- <strong>AI for science and education</strong>, including benchmarks, evaluations, algorithms, and tutoring systems -->
-							<strong>AI for scientific reasoning and discovery</strong>, including benchmarks, algorithms, and systems
+							<strong>AI for Scientific Reasoning and Discovery</strong>
 							<a href="https://scienceqa.github.io/" target="_blank">[ScienceQA]</a> 
 							<a href="https://arxiv.org/abs/2307.10635" target="_blank">[SciBench]</a> 
-							<!-- <a href="https://arxiv.org/abs/2304.09842" target="_blank">[Chameleon]</a> -->
+							<a href="https://chameleon-llm.github.io/" target="_blank">[Chameleon]</a>
+							<a href="https://arxiv.org/abs/2501.06590" target="_blank">[ChemAgent]</a>
+
+
 							<!-- <a href="https://arxiv.org/abs/2305.12524" target="_blank">[TheoremQA]</a> -->
 						</li>
 					</ul>
@@ -194,6 +202,11 @@
 			<h3 id="News" style="">News</h3>
 			<hr>
 			<ul>
+				<li>
+					<strong>[02/2025]&nbsp; <font color="red">New!</font></strong>
+					Our <b><a href="https://octotools.github.io/" target="_blank">OctoTools</a></b> agentic framework with extensible tools is available at
+					<b><a href="https://arxiv.org/abs/2502.11271" target="_blank">Preprint</a></b>.
+				</li>
 				<li>
 					<strong>[01/2025]&nbsp; <font color="red">New!</font></strong>
 					Four papers are accepted to
@@ -291,6 +304,16 @@
 				<span id="dots"></span>
 				<span id="more">
 					<ul style="margin-top: -15px">
+						<li>
+							<strong>[01/2024]&nbsp; <font color="red">New!</font></strong>
+							Two papers on large multimodal models are accepted to
+							<b><a href="https://iclr.cc/Conferences/2024" target="_blank">ICLR 2024</a></b>.
+						</li>
+						<li>
+							<strong>[01/2024]&nbsp; <font color="red">New!</font></strong>
+							A paper on model editing for LLMs is available at
+							<b><a href="https://arxiv.org/abs/2401.04700" target="_blank">Preprint</a></b>.
+						</li>						
 						<li>
 							<strong>[12/2023]&nbsp; <font color="red">New!</font></strong>
 							I am co-organizing the <b><a href="https://sites.google.com/view/tavi-cvpr24/" target="_blank">Tool-Augmented VIsion</a></b>
@@ -581,6 +604,35 @@
 		All publications can be found on my <a href="https://scholar.google.com/citations?user=IyucsdQAAAAJ&hl=en" target="_blank">Google Scholar</a> page.
 		<br>
 		<br>
+
+		<!-- OctoTools -->
+		<div class="row">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="projects/arxiv25_octotools/cover.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<a href="">
+					<img src="logos/fire.png" id="logo">
+					<img src="logos/fire.png" id="logo">
+				</a>
+				<b>
+					<font color="black">
+						OctoTools: An Agentic Framework with Extensible Tools for Complex Reasoning
+					</font>
+				</b><br>
+				<b>Pan Lu*</b>, Bowen Chen*, Sheng Liu*, Rahul Thapa, Joseph Boen, James Zou
+				<br>
+				<b><a href="https://arxiv.org/abs/2502.11271" target="_blank">arXiv:2502.11271&nbsp;</a></b>
+				<a href="https://octotools.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
+				<a href="https://arxiv.org/abs/2502.11271" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="https://arxiv.org/pdf/2502.11271" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="https://github.com/octotools/octotools" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="https://huggingface.co/spaces/OctoTools/octotools" target="_blank"> <small>[Demo]&nbsp;</small></a>
+				<a href="projects/arxiv25_octotools/bib.txt" target="_blank"> <small>[BibTex]</small></a><br>
+				(*Equal Contribution)<br>
+			</div>
+		</div>
+		<hr>
 
 		<!-- TextGrad -->
 		<div class="row">
@@ -1078,14 +1130,11 @@
 		<hr>
 
 		<!-- Ark -->
-		<div class="row">
+		<!-- <div class="row">
 			<div class="col-md-3">
 				<img class="img-fluid img-rounded" src="imgs/arxiv23_ark.png" style="" alt="">
 			</div>
 			<div class="col-md-9">
-				<!-- <a href="">
-					<img src="logos/fire.png" id="logo">
-				</a> -->
 				<b>
 					<font color="black">ArK: Augmented Reality with Knowledge Emergent Infrastructure</font>
 				</b><br>
@@ -1097,7 +1146,7 @@
 				(*Equal Contribution)
 			</div>
 		</div>
-		<hr>
+		<hr> -->
 
 		<!-- LLaMA-Adapter-V2 -->
 		<div class="row">
@@ -1297,7 +1346,7 @@
 		<hr>
 
 		<!-- Animation -->
-		<div class="row">
+		<!-- <div class="row">
 			<div class="col-md-3">
 				<img class="img-fluid img-rounded" src="imgs/arxiv22_animation.png" style="" alt="">
 			</div>
@@ -1312,7 +1361,7 @@
 				<a href="bibs/arxiv22_animation.txt" target="_blank"> <small>[BibTex]</small></a><br>
 			</div>
 		</div>
-		<hr>
+		<hr> -->
 
 		<!-- AAAI22 -->
 		<div class="row">
@@ -1357,7 +1406,7 @@
 		<hr>
 
 		<!-- GenMotion -->
-		<div class="row">
+		<!-- <div class="row">
 			<div class="col-md-3">
 				<img class="img-fluid img-rounded" src="imgs/arxiv21_genmotion.png" style="" alt="">
 			</div>
@@ -1372,7 +1421,7 @@
 				<a href="bibs/arxiv21_genmotion.txt" target="_blank"> <small>[BibTex]</small></a><br>
 			</div>
 		</div>
-		<hr>
+		<hr> -->
 
 		<!-- NeurIPS21 -->
 		<div class="row">
