--- a/index.html
+++ b/index.html
@@ -581,14 +581,17 @@
 			<!-- <li>January 8-9, 2025:
 				<a href="https://jointmathematicsmeetings.org/meetings/national/jmm2025/2314_intro" target="_blank">JMM 2025 at Seattle, Washington</a>
 			</li> -->
-			<!-- <li>April 29 - May 4, 2025:
+			<li>April 29 - May 4, 2025:
 				<a href="https://2025.naacl.org/" target="_blank">NAACL 2025 at Albuquerque, New Mexico</a>
+				(TBD)
 			</li>
 			<li>June 10 - June 17, 2025:
 				<a href="https://www.thecvf.com/" target="_blank">CVPR 2025 at Nashville, Tennessee</a>
-			</li> -->
+				(TBD)
+			</li>
 			<li>October 19-25, 2025:
 				<a href="https://www.thecvf.com/" target="_blank">ICCV 2025 at Honolulu, Hawaii</a>
+				(TBD)
 			</li>
 			<li>December 9-15, 2025:
 				<a href="https://neurips.cc/" target="_blank">NeurIPS 2025 at San Diego, California</a>
@@ -1767,6 +1770,10 @@
 				<li>
 					<strong>Area Chair</strong>, 
 					<a>ICLR 2025</a>
+				</li>
+				<li>
+					<strong>Area Chair</strong>, 
+					<a>ACL 2025</a>
 				</li>
 			</ul>
 		<h4 id="Service" style="">Workshops and Tutorials</h4>
