--- a/index.html
+++ b/index.html
@@ -650,10 +650,10 @@
 				</a>
 				<b>
 					<font color="black">
-						TextGrad: Automatic ''Differentiation'' via Text
+						Optimizing generative AI by backpropagating language model feedback
 					</font>
 				</b><br>
-				Mert Yuksekgonul*, Federico Bianchi*, Joseph Boen*, Sheng Liu*, <b>Pan Lu*</b>, Zhi Huang*, Carlos Guestrin, James Zou 
+				Mert Yuksekgonul*, Federico Bianchi*, Joseph Boen*, Sheng Liu*, <b>Pan Lu*</b>, Zhi Huang*, Carlos Guestrin, James Zou
 				<br>
 				<b><a href="https://textgrad.com/" target="_blank">Under Review&nbsp;</a></b>
 				<a href="https://textgrad.com/" target="_blank"> <small>[Project]&nbsp;</small></a>
@@ -1704,10 +1704,10 @@
 		<hr>
 		<h4 id="Teaching" style="">Guest Lecturers</h4>
 		<ul>
-			<!-- <li>
+			<li>
 				<strong>Guest Lecturer</strong>, <em>LLMs and Mathematics Seminar</em> <a href="https://ayushkhaitanrutgers.github.io/seminar.html" target="_blank">[Website]</a> <br>
 				Graduate, Rutgers University, Spring 2025
-			</li> -->
+			</li>
 			<li>
 				<strong>Guest Lecturer</strong>, <em>CSCE 638: Natural Language Processing: Foundation and Techniques</em> <a href="https://khhuang.me/CSCE638-S25/" target="_blank">[Website]</a> <br>
 				Graduate, TAMU, Spring 2025
