--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
 							<a href="https://scienceqa.github.io/" target="_blank">[ScienceQA]</a> 
 							<a href="https://arxiv.org/abs/2307.10635" target="_blank">[SciBench]</a> 
 							<a href="https://chameleon-llm.github.io/" target="_blank">[Chameleon]</a>
+							<a href="https://www.arxiv.org/abs/2502.17504" target="_blank">[Protein-LLM]</a> 
 							<a href="https://arxiv.org/abs/2501.06590" target="_blank">[ChemAgent]</a>
 
 
@@ -664,6 +665,53 @@
 				<a href="https://textgrad.readthedocs.io/en/latest/index.html" target="_blank"> <small>[Documentation]&nbsp;</small></a>
 				<a href="bibs/textgrad.txt" target="_blank"> <small>[BibTex]</small></a><br>
 				(*Equal Contribution)<br>
+			</div>
+		</div>
+		<hr>
+
+		<!-- Protein-LLM -->
+		<div class="row">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="projects/arxiv25_protein-llm/cover.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<b>
+					<font color="black">
+						Protein Large Language Models: A Comprehensive Survey
+					</font>
+				</b><br>
+				Yijia Xiao, Wanjia Zhao, Junkai Zhang, Yiqiao Jin, Han Zhang, Zhicheng Ren, Renliang Sun, Haixin Wang, Guancheng Wan, <b>Pan Lu</b>, Xiao Luo, Yu Zhang, James Zou, Yizhou Sun, Wei Wang
+				<br>
+				<b><a href="https://arxiv.org/abs/2502.17504" target="_blank">Preprint&nbsp;</a></b>
+				<a href="https://arxiv.org/abs/2502.17504" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="https://arxiv.org/pdf/2502.17504.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="https://github.com/Yijia-Xiao/Protein-LLM-Survey" target="_blank"> <small>[Tutorial]&nbsp;</small></a>
+				<a href="https://x.com/YIJIA_XIAO_/status/1895156151622263034" target="_blank"> <small>[Coverage]&nbsp;</small></a>
+				<a href="projects/arxiv25_protein-llm/bib.txt" target="_blank"> <small>[BibTex]</small></a>
+			</div>
+		</div>
+		<hr>
+
+		<!-- VISCO -->
+		<div class="row">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="projects/cvpr25_visco/cover.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<b>
+					<font color="black">
+						VISCO: Benchmarking Fine-Grained Critique and Correction Towards Self-Improvement in Visual Reasoning
+					</font>
+				</b><br>
+				Xueqing Wu, Yuheng Ding, Bingxuan Li, <b>Pan Lu</b>, Da Yin, Kai-Wei Chang, Nanyun Peng
+				<br>
+				<b><a href="https://arxiv.org/abs/2412.02172" target="_blank">CVPR 2025&nbsp;</a></b>
+				<a href="https://visco-benchmark.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
+				<a href="https://arxiv.org/abs/2412.02172" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="https://arxiv.org/pdf/2412.02172.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="https://github.com/PlusLabNLP/VISCO" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="https://huggingface.co/datasets/uclanlp/VISCO" target="_blank"> <small>[Data]&nbsp;</small></a>
+				<a href="projects/cvpr25_visco/bib.txt" target="_blank"> <small>[BibTex]</small></a>
 			</div>
 		</div>
 		<hr>
