--- a/index.html
+++ b/index.html
@@ -1811,6 +1811,11 @@
 		<h4 id="Service" style="">Conferences</h4>
 			<ul>
 				<li>
+					<strong>Student Organizer</strong>, 
+					<a href="https://nenlp.github.io/spr2025/" target="_blank">New England NLP Meeting (NENLP) 2025</a>,
+					New Haven, 2025.04
+				</li>
+				<li>
 					<strong>Program Chair</strong>, 
 					<a href="https://socalnlp.github.io/symp23/index.html" target="_blank">The 4th Southern California Natural Language Symposium (SoCal NLP)</a>,
 					Los Angeles, 2023.11
