--- a/index.html
+++ b/index.html
@@ -204,6 +204,10 @@
 			<hr>
 			<ul>
 				<li>
+					<strong>[03/2025]&nbsp; <font color="red">New!</font></strong>
+					Thrilled to have <b><a href="https://textgrad.com/" target="_blank">TextGrad</a></b> is published at <b><a href="https://www.nature.com/articles/s41586-025-08661-4" target="_blank">Nature</a></b>!
+				</li>
+				<li>
 					<strong>[02/2025]&nbsp; <font color="red">New!</font></strong>
 					Our <b><a href="https://octotools.github.io/" target="_blank">OctoTools</a></b> agentic framework with extensible tools is available at
 					<b><a href="https://arxiv.org/abs/2502.11271" target="_blank">Preprint</a></b>.
@@ -584,7 +588,6 @@
 			</li> -->
 			<li>April 29 - May 4, 2025:
 				<a href="https://2025.naacl.org/" target="_blank">NAACL 2025 at Albuquerque, New Mexico</a>
-				(TBD)
 			</li>
 			<li>June 10 - June 17, 2025:
 				<a href="https://www.thecvf.com/" target="_blank">CVPR 2025 at Nashville, Tennessee</a>
