--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 			<ul>
 				<li>
 					<strong>[03/2025]&nbsp; <font color="red">New!</font></strong>
-					Thrilled to have <b><a href="https://textgrad.com/" target="_blank">TextGrad</a></b> is published at <b><a href="https://www.nature.com/articles/s41586-025-08661-4" target="_blank">Nature</a></b>!
+					Thrilled to announce that <b><a href="https://textgrad.com/" target="_blank">TextGrad</a></b> is published in <b><a href="https://www.nature.com/articles/s41586-025-08661-4" target="_blank">Nature</a></b>!
 				</li>
 				<li>
 					<strong>[02/2025]&nbsp; <font color="red">New!</font></strong>
