--- a/index.html
+++ b/index.html
@@ -182,11 +182,11 @@
 							<!-- <a href="https://arxiv.org/abs/2305.12524" target="_blank">[TheoremQA]</a> -->
 						</li>
 					</ul>
-					<!-- <a style="color: red;">
-						We are seeking highly motivated students to collaborate on research projects focused on
-						<b> AI-driven mathematical reasoning and scientific discovery</b>.  
-						If you're interested in joining our team, please don't hesitate to contact me!
-					</a><br> -->
+					<font color="red">
+						We are seeking students to collaborate on research in
+						<b> Agentic AI, Reinforcement Learning, Mathematical Reasoning, AI for Science, and related fields</b>. 
+						Background in these areas is recommended. If you're interested in joining us, please apply via <a href="https://forms.gle/kP7eja1vckNPnGy88" target="_blank">this form</a>!
+					</font><br>
 				</div>
 			</div>
 		</div>
