--- a/index.html
+++ b/index.html
@@ -1846,7 +1846,7 @@
 		<h4 id="Service" style="">Conferences</h4>
 			<ul>
 				<li>
-					<strong>Program Chair</strong>, 
+					<strong>Senior Program Chair</strong>, 
 					<a href="https://nenlp.github.io/spr2025/" target="_blank">New England NLP Meeting (NENLP) 2025</a>,
 					New Haven, 2025.04
 				</li>
