--- a/index.html
+++ b/index.html
@@ -665,10 +665,13 @@
 				<b><a href="https://arxiv.org/abs/2502.11271" target="_blank">arXiv:2502.11271&nbsp;</a></b>
 				<a href="https://octotools.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
 				<a href="https://arxiv.org/abs/2502.11271" target="_blank"> <small>[Paper]&nbsp;</small></a>
-				<a href="https://arxiv.org/pdf/2502.11271" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<!-- <a href="https://arxiv.org/pdf/2502.11271" target="_blank"> <small>[PDF]&nbsp;</small></a> -->
 				<a href="https://github.com/octotools/octotools" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="https://pypi.org/project/octotoolkit/" target="_blank"> <small>[Package]&nbsp;</small></a>
 				<a href="https://huggingface.co/spaces/OctoTools/octotools" target="_blank"> <small>[Demo]&nbsp;</small></a>
+				<a href="https://www.youtube.com/watch?v=4828sGfx7dk&ab_channel=DiscoverAI" target="_blank"> <small>[YouTube]&nbsp;</small></a>
 				<a href="https://x.com/lupantech/status/1892260474320015861" target="_blank"> <small>[Twitter]&nbsp;</small></a>
+				<a href="https://join.slack.com/t/octotools/shared_invite/zt-3485ikfas-zMTbFbuodJmET~R6KXHEGw" target="_blank"> <small>[Slack]&nbsp;</small></a>
 				<a href="projects/arxiv25_octotools/bib.txt" target="_blank"> <small>[BibTex]</small></a>
 				<a href="https://github.com/octotools/octotools" target="_blank"><img src="https://img.shields.io/github/stars/octotools/octotools?style=social" alt="GitHub stars"></a>
 				<br>
@@ -1854,6 +1857,10 @@
 					<strong>Program Chair</strong>, 
 					<a href="https://socalnlp.github.io/symp23/index.html" target="_blank">The 4th Southern California Natural Language Symposium (SoCal NLP)</a>,
 					Los Angeles, 2023.11
+				</li>
+				<li>
+					<strong>Area Chair</strong>, 
+					<a>NeurIPS 2025</a>
 				</li>
 				<li>
 					<strong>Area Chair</strong>, 
