--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 				</li>
 				<li>
 					<strong>[04/2024]&nbsp; <font color="red">New!</font></strong>
-					Defended my postdoctoral dissertation! Thanks to my advisor and committee members!
+					Defended my doctoral dissertation! Thanks to my advisor and committee members!
 				</li>
 				<li>
 					<strong>[03/2024]&nbsp; <font color="red">New!</font></strong>
