--- a/index.html
+++ b/index.html
@@ -604,19 +604,19 @@
 				<a href="https://www.thecvf.com/" target="_blank">CVPR 2025 at Nashville, Tennessee</a>
 				(TBD)
 			</li> -->
-			<!-- <li>October 19-25, 2025:
+			<!-- <li>October 19 - October25, 2025:
 				<a href="https://iccv.thecvf.com/" target="_blank">ICCV 2025 at Honolulu, Hawaii</a>
 				(TBD)
 			</li> -->
-			<li>December 9-15, 2025:
+			<li>December 9 - December15, 2025:
 				<a href="https://neurips.cc/" target="_blank">NeurIPS 2025 at San Diego, California</a>
 			</li>
 			<!-- <li>June 2026 (TBD):
 				<a href="https://www.thecvf.com/" target="_blank">CVPR 2026 at Denver, Colorado (TBD)</a>
 			</li> -->
-			<!-- <li>July 2026 (TBD):
+			<li>July 2 - July 7, 2026 (TBD):
 				<a href="https://2026.aclweb.org/" target="_blank">ACL 2026 at San Diego, California</a>
-			</li> -->
+			</li>
 			<!-- <li>October 2026 (TBD):
 				<a href="https://colmweb.org/index.html" target="_blank">COLM 2026 at XXXX (TBD)</a>
 			</li> -->
@@ -907,8 +907,8 @@
 				<a href="https://twitter.com/JasonForJoy/status/1744932437006885060" target="_blank"> <small>[Twitter]&nbsp;</small></a>
 				<!-- <a href="" target="_blank"> <small>[Coverage]&nbsp;</small></a> -->
 				<a href="bibs/emnlp24_modelediting.txt" target="_blank"> <small>[BibTex]</small></a><br>
-				<a id="award" href="https://alphasignalai.beehiiv.com/p/weeks-top-5-ai-papers?utm_source=alphasignalai.beehiiv.com&utm_medium=newsletter&utm_campaign=this-week-s-top-5-ai-papers" target="_blank">
-					<font color="red"><b>🏆 Best Paper Nomination</b> </font>
+				<a id="award" >
+					<font color="red"><b>🏆 Best Paper Honorable Mention Award, ACL 2023</b> </font>
 				</a> 
 				<br>
 			</div>
@@ -1982,7 +1982,7 @@
 		<h3 id="Awards" style="">Selected Awards</h3>
 		<hr>
 		<ul>
-			<li><strong>Best Paper Award at the KnowledgeNLP Workshop</strong>, 
+			<li><strong>Best Paper Award, KnowledgeNLP Workshop-NAACL 2025</strong>, 
 				2024
 				<a href="https://knowledge-nlp.github.io/naacl2025/index.html" target="_blank">[Link]</a>
 			</li>
@@ -1996,6 +1996,7 @@
 				<a href="https://samueli.ucla.edu/ucla-samueli-in-the-news" target="_blank">[UCLA Engineering]</a>
 				<a href="https://www.cs.ucla.edu/cs-ph-d-pan-lu-awarded-bloomberg-data-science-ph-d-fellowship/" target="_blank">[UCLA CS]</a>
 			</li>
+			<li><strong>Best Paper Honorable Mention Award, ACL 2023</strong>, 2023</li>
 			<li><strong>EMNLP 2024 Diversity and Inclusion Award</strong>, 2023</li>
 			<li><strong>NeurIPS 2023 Scholar Award</strong>, 2023</li>
 			<li><strong>Qualcomm Innovation Fellowship</strong>, 2023
