--- a/index.html
+++ b/index.html
@@ -132,34 +132,14 @@
 					</p>
 					<ul>
 						<li>
-							<strong>Mathematical Reasoning</strong> in multimodal and knowledge-intensive contexts 
-							<a href="https://mathvista.github.io/" target="_blank">[MathVista]</a>
-							<a href="https://arxiv.org/abs/2403.14624" target="_blank">[MathVerse]</a>
-							<a href="https://promptpg.github.io/" target="_blank">[PromptPG]</a>
-							<a href="https://lupantech.github.io/inter-gps/" target="_blank">[Inter-GPS]</a>
-							<a href="https://arxiv.org/abs/2110.13214" target="_blank">[IconQA]</a>
-							<!-- <a href="https://arxiv.org/abs/2402.17644" target="_blank">[QRData]</a> -->
-							<a href="https://arxiv.org/abs/2305.12524" target="_blank">[TheoremQA]</a>
-							<a href="https://arxiv.org/abs/2212.10535" target="_blank">[DL4Math]</a>
-							<!-- <a href="https://arxiv.org/abs/2210.17517" target="_blank">[Lila]</a> -->
-							<!-- <a href="https://arxiv.org/abs/2212.02746" target="_blank">[UniGeo]</a> -->
-							<a href="https://mathai2024.github.io/" target="_blank">[MATH-AI]</a>
-						</li>
-						<li>
 							<strong>Tool-Augmented LLMs</strong> and <strong>Agentic Systems</strong> for complex reasoning
 							<a href="https://octotools.github.io/" target="_blank">[OctoTools]</a>
-							<a href="https://textgrad.com/" target="_blank">[TextGrad]</a>
+							<!-- <a href="https://textgrad.com/" target="_blank">[TextGrad]</a> -->
 							<a href="https://chameleon-llm.github.io/" target="_blank">[Chameleon]</a>
 							<a href="https://arxiv.org/abs/2501.06590" target="_blank">[ChemAgent]</a>
-
-							<!-- <a href="https://arxiv.org/abs/2406.13444" target="_blank">[VDebugger]</a>  -->
-							<!-- <a href="https://arxiv.org/abs/2307.10635" target="_blank">[SciBench]</a>  -->
-							<!-- <a href="https://arxiv.org/abs/2305.12524" target="_blank">[TheoremQA]</a> -->
-							<!-- <a href="https://arxiv.org/abs/2305.01795" target="_blank">[MPP]</a>  -->
-							<!-- <a href="https://arxiv.org/abs/2210.17517" target="_blank">[Lila]</a> -->
 						</li>
 						<li>
-							<strong>Post-Training</strong>  and <strong>Test-Time Compute Optimization</strong> for foundation models
+							<strong>Post-Training</strong> and <strong>Test-Time Training</strong> techniques for foundation models
 							<a href="https://arxiv.org/abs/2405.19716" target="_blank">[STIC]</a> 
 							<a href="https://github.com/OpenGVLab/LLaMA-Adapter" target="_blank">[LLaMA-Adapter]</a> 
 							<a href="https://arxiv.org/abs/2303.16199" target="_blank">[LLaMA-Adapter V2]</a>
@@ -168,16 +148,23 @@
 							<a href="https://promptpg.github.io/" target="_blank">[PromptPG]</a>
 						</li>
 						<li>
-							<!-- <strong>AI for science and education</strong>, including benchmarks, evaluations, algorithms, and tutoring systems -->
-							<strong>AI for Scientific Reasoning and Discovery</strong>
+							<strong>AI for Math</strong>: advancing mathematical reasoning capabilities of AI systems and LLMs across multimodal, knowledge-intensive, and real-world contexts
+							<a href="https://mathvista.github.io/" target="_blank">[MathVista]</a>
+							<a href="https://arxiv.org/abs/2403.14624" target="_blank">[MathVerse]</a>
+							<a href="https://promptpg.github.io/" target="_blank">[PromptPG]</a>
+							<a href="https://lupantech.github.io/inter-gps/" target="_blank">[Inter-GPS]</a>
+							<a href="https://arxiv.org/abs/2110.13214" target="_blank">[IconQA]</a>
+							<a href="https://arxiv.org/abs/2305.12524" target="_blank">[TheoremQA]</a>
+							<a href="https://arxiv.org/abs/2212.10535" target="_blank">[DL4Math]</a>
+							<a href="https://mathai2024.github.io/" target="_blank">[MATH-AI]</a>
+						</li>
+						<li>
+							<strong>AI for Science</strong>: AI systems that facilitate scientific reasoning and scientific discovery
 							<a href="https://scienceqa.github.io/" target="_blank">[ScienceQA]</a> 
 							<a href="https://arxiv.org/abs/2307.10635" target="_blank">[SciBench]</a> 
-							<a href="https://chameleon-llm.github.io/" target="_blank">[Chameleon]</a>
+							<!-- <a href="https://chameleon-llm.github.io/" target="_blank">[Chameleon]</a> -->
 							<a href="https://www.arxiv.org/abs/2502.17504" target="_blank">[Protein-LLM]</a> 
 							<a href="https://arxiv.org/abs/2501.06590" target="_blank">[ChemAgent]</a>
-
-
-							<!-- <a href="https://arxiv.org/abs/2305.12524" target="_blank">[TheoremQA]</a> -->
 						</li>
 					</ul>
 					<font color="red">
@@ -391,7 +378,7 @@
 						<li>
 							<strong>[05/2023]&nbsp; <font color="red">New!</font></strong>
 							Honored to deliver a guest lecture for UCLA CS 263: Natural Language Processing. 
-							<b><a href="docs/UCLA CS263 NLP_Guest Lecture_Pan Lu_2023.05.31.pdf" target="_blank">[Slides]</a></b>
+							<b><a href="docs/UCLA_CS263_NLP_Guest Lecture_Pan Lu_2023.05.31.pdf" target="_blank">[Slides]</a></b>
 						</li>
 						<li>
 							<strong>[05/2023]&nbsp; <font color="red">New!</font></strong>
@@ -1813,7 +1800,7 @@
 		<h4 id="Teaching" style="">Guest Lecturers</h4>
 		<ul>
 			<li>
-				<strong>Guest Lecturer</strong>, <em>CSE244C: Deep Learning for Advanced Computer Vision
+				<strong>Guest Lecturer</strong>, <em>CSE 244C: Deep Learning for Advanced Computer Vision
 				</em> <a href="https://courses.engineering.ucsc.edu/courses/cse244c" target="_blank">[Website]</a> <br>
 				Graduate, UC Santa Cruz, Spring 2025
 			</li>
@@ -1825,10 +1812,6 @@
 				<strong>Guest Lecturer</strong>, <em>CSCE 638: Natural Language Processing: Foundation and Techniques</em> <a href="https://khhuang.me/CSCE638-S25/" target="_blank">[Website]</a> <br>
 				Graduate, TAMU, Spring 2025
 			</li>
-			<!-- <li>
-				<strong>Guest Lecturer</strong>, <em>CSE 290C: Advanced Topics in Machine Learning</em> <a href="https://courses.engineering.ucsc.edu/courses/cse290C" target="_blank">[Website]</a> <br>
-				Graduate, UC Santa Cruz, Winter 2025
-			</li> -->
 			<li>
 				<strong>Guest Lecturer</strong>, <em>CS 263: Natural Language Processing</em> <a href="docs/UCLA CS263 NLP_Guest Lecture_Pan Lu_2023.05.31.pdf" target="_blank">[Slides]</a> <br>
 				Graduate, UCLA, Spring 2023
