--- a/index.html
+++ b/index.html
@@ -591,19 +591,19 @@
 				<a href="https://www.thecvf.com/" target="_blank">CVPR 2025 at Nashville, Tennessee</a>
 				(TBD)
 			</li> -->
-			<!-- <li>October 19 - October25, 2025:
+			<li>October 19 - October 23, 2025:
 				<a href="https://iccv.thecvf.com/" target="_blank">ICCV 2025 at Honolulu, Hawaii</a>
 				(TBD)
-			</li> -->
-			<li>December 9 - December15, 2025:
+			</li>
+			<li>December 9 - December 15, 2025:
 				<a href="https://neurips.cc/" target="_blank">NeurIPS 2025 at San Diego, California</a>
 			</li>
 			<!-- <li>June 2026 (TBD):
 				<a href="https://www.thecvf.com/" target="_blank">CVPR 2026 at Denver, Colorado (TBD)</a>
-			</li> -->
-			<li>July 2 - July 7, 2026 (TBD):
-				<a href="https://2026.aclweb.org/" target="_blank">ACL 2026 at San Diego, California</a>
 			</li>
+			<li>July 2 - July 7, 2026:
+				<a href="https://2026.aclweb.org/" target="_blank">ACL 2026 at San Diego, California (TBD)</a>
+			</li> -->
 			<!-- <li>October 2026 (TBD):
 				<a href="https://colmweb.org/index.html" target="_blank">COLM 2026 at XXXX (TBD)</a>
 			</li> -->
