--- a/index.html
+++ b/index.html
@@ -172,10 +172,11 @@
 						</li>
 					</ul>
 					<font color="red">
-						We are seeking students to collaborate on research in
-						<b> Agentic AI, Reinforcement Learning, Mathematical Reasoning, AI for Science, and related fields</b>. 
-						Background in these areas is recommended. If you're interested in joining us, please apply via <a href="https://forms.gle/kP7eja1vckNPnGy88" target="_blank">this form</a>!
-					</font><br>
+						[25.06] We are seeking students to collaborate on research in
+						<b> agentic AI, post-training LLMs, reinforcement learning, mathematical reasoning, AI for Science, and related fields</b>. 
+					</font>
+						A background in these fields is preferred but not strictly required. If you're interested in joining us, please apply via <b><a href="https://forms.gle/kP7eja1vckNPnGy88" target="_blank">this form</a></b>. For a faster response, kindly send me an email after submitting the form.
+					<br>
 				</div>
 			</div>
 		</div>
@@ -2085,7 +2086,7 @@
 		</center> -->
 		<div class="row">
 			<div class="col-md-9">
-				<p align="left">&copy; Pan Lu 2024</p>
+				<p align="left">&copy; Pan Lu 2025</p>
 			</div>
 			<div class="col-md-3">
 				<script type="text/javascript" id="clustrmaps"
